--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -23,12 +23,13 @@ jobs:
 
       - name: Sync Files to Private Repository
         uses: dmnemec/copy_file_to_another_repo_action@main
+        env:
+          API_TOKEN_GITHUB: ${{ secrets.PRIVATE_REPO_TOKEN }}
         with:
           source_file: "friends/**"
           destination_repo: "ActonMartin/My_Blog"
           destination_branch: "main"
           destination_folder: "src/content/friends"
-          github_token: ${{ secrets.PRIVATE_REPO_TOKEN }}
           commit_message: "Sync friends folder from public repository"
           user_email: "github-actions[bot]@users.noreply.github.com"
           user_name: "github-actions[bot]"
