--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -3,10 +3,10 @@ name: Sync Files to Private Repository
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
     types:
       - closed
   workflow_dispatch:
