ci(workflow): 将目标分支从main更改为master
修改同步工作流中的目标分支配置，以匹配目标仓库的分支命名

--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           source_file: "friends/**"
           destination_repo: "ActonMartin/My_Blog"
-          destination_branch: "main"
+          destination_branch: "master"
           destination_folder: "src/content/friends"
           commit_message: "Sync friends folder from public repository"
           user_email: "github-actions[bot]@users.noreply.github.com"
