ci(workflow): 修改同步配置中的源文件路径
将源文件路径从 "friends/**" 改为 "friends" 以更精确地指定同步文件

--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -26,7 +26,7 @@ jobs:
         env:
           API_TOKEN_GITHUB: ${{ secrets.PRIVATE_REPO_TOKEN }}
         with:
-          source_file: "friends/**"
+          source_file: "friends"
           destination_repo: "ActonMartin/My_Blog"
           destination_branch: "master"
           destination_folder: "src/content/friends"
