ci(workflow): 修改同步工作流中的目标文件夹路径
将friends文件夹的同步目标路径从"src/content/friends"改为"src/content"，以简化目录结构

--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -1,6 +1,8 @@
 name: Sync Files to Private Repository
 
 on:
+  schedule:
+    - cron: '0 21 * * *' # 每天 UTC 时间 21 点运行
   push:
     branches:
       - master
@@ -29,7 +31,7 @@ jobs:
           source_file: "friends"
           destination_repo: "ActonMartin/My_Blog"
           destination_branch: "master"
-          destination_folder: "src/content/friends"
+          destination_folder: "src/content"
           commit_message: "Sync friends folder from public repository"
           user_email: "github-actions[bot]@users.noreply.github.com"
           user_name: "github-actions[bot]"
